Fix environment variable check in HibernateUtil to use isEmpty() for better clarity